Fix FormSubmit _redirect URL

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -160,7 +160,7 @@
             <input
               type="hidden"
               name="_redirect"
-              value="https://Mansi-Zanjale.github.io/portfolio/thankyou.html"
+              value="https://mansi-zanjale.github.io/CODING-SAMURI-INTERNSHIP-TASK/portfolio/thankyou.html"
             />
 
             <button class="b" type="submit">SEND</button>
