Fix Getform redirect to custom thankyou page

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -141,12 +141,13 @@
       </p>
       <div class="wrap">
         <div class="form first ani">
-          <form
-            action="https://formsubmit.co/mansizanjale2824@gmail.com"
-            method="POST"
-          >
-            <!-- Disable FormSubmit captcha screen -->
-            <input type="hidden" name="_captcha" value="false" />
+          <form action="https://getform.io/f/bzygrvqa" method="POST">
+            <!-- Correct absolute redirect URL -->
+            <input
+              type="hidden"
+              name="_next"
+              value="https://mansi-zanjale.github.io/CODING-SAMURI-INTERNSHIP-TASK/portfolio/thankyou.html"
+            />
 
             <input type="text" name="name" placeholder="Name" required />
             <input type="email" name="email" placeholder="Email" required />
@@ -156,12 +157,6 @@
               placeholder="MESSAGE"
               required
             ></textarea>
-
-            <input
-              type="hidden"
-              name="_redirect"
-              value="https://mansi-zanjale.github.io/CODING-SAMURI-INTERNSHIP-TASK/portfolio/thankyou.html"
-            />
 
             <button class="b" type="submit">SEND</button>
           </form>
